[package]
name = "easy-hex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
hex = { version = "0.4.3", features = [
    "serde",
    "alloc",
], default-features = false }
serde = "1.0.155"

[dev-dependencies]
serde_json = "1"
serde_derive = "1"
