[package]
name = "easy-hex"
version = "0.1.2"
edition = "2021"
description = "An easy to use Hex string formatting wrapper"
repository = "https://github.com/Kimundi/easy-hex"
license = "MIT OR Apache-2.0"
keywords = ["hex", "serde", "formatting", "bytemuck"]
categories = ["algorithms", "encoding"]

[features]
default = ["serde", "bytemuck"]
serde = ["dep:serde"]
bytemuck = ["dep:bytemuck"]

[dependencies]
hex = { version = "0.4.3", default-features = false }
bytemuck = { version = "1.13.1", features = ["derive"], optional = true }
serde = { version = "1.0.155", optional = true }

[dev-dependencies]
serde_json = { version = "1" }
serde_derive = { version = "1" }
generic-array = "0.14.6"
